# optitrack_pkg

./: README.md
optitrack/: CMakeLists.txt  package.xml
optitrack/include/: Mocap.hpp
optitrack/include/NatNetLinux/: CommandListener.h  FrameListener.h  NatNet.h
optitrack/launch/: opti_launch.launch
optitrack/msg/: RigidBody.msg
optitrack/src/: Mocap.cpp  optitrack_node.cpp
optitrack_interfaces_msgs/: CMakeLists.txt  package.xml
optitrack_interfaces_msgs/msg/: RigidBody.msg
optitrack_msgs/: CMakeLists.txt  package.xml
optitrack_msgs/msg/: Marker.msg  RigidBody.msg
