<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>optitrack</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gcz@onet.pl">asus-rog-user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake</build_depend>

  <!-- <depend>optitrack</depend> -->

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <depend>eigen</depend>
  <depend>optitrack_interfaces_msgs</depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>nav_msgs</depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>

  <member_of_group>ament_cmake</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


